2010-02-02  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* magick/deprecate.c: The string constants LoadImageText,
	SaveImageText, LoadImagesText, and SaveImagesText should have been
	deprecated, rather than being entirely removed.

2010-01-31  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* www/Makefile.am (install-data-html): Make sure that only the
	necessary documentation files are installed.

2010-01-28  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* magick/transform.c (FlattenImages): Apply the image background
	color under the initial canvas image if it is non-opaque.

	* magick/composite.c (MagickCompositeImageUnderColor): New private
	function to apply a color underneath a non-opaque image.

2010-01-26  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* magick/effect.c (BlurImageScanlines): Solid color images which
	only differed in the matte channel were not being blurred.

	* magick/color.h (NotPixelMatch,PixelMatch): New macros to
	fully-compare a pixel, including matte.

2010-01-25  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* magick/resource.c (SetMagickResourceLimit): Invoke
	omp_set_num_threads() to set thread limit if ThreadsResource is
	requested.

	* magick/pixel_cache.c (AllocateThreadViewSet): The number of
	cache views to allocate needs to be obtained from
	omp_get_max_threads().  Otherwise there is a crash if the number
	of threads is reduced from the original value.

2010-01-21  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* version.sh: Released GraphicsMagick 1.3.8.
	
	* NEWS.txt: Update for the 1.3.8 release.

2010-01-20  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* www/benchmarks.rst: Update benchmark report to compare
	performance with ImageMagick 6.5.8-10.

2010-01-17  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* magick/shear.c (RotateImage, ShearImage): Ensure that errors
	propagate up to the API user.  Don't overwrite a detailed
	exception message with a generic one.  Don't return a bogus image