@@ -24,6 +24,15 @@
 2010-02-02  Bob Friesenhahn  &lt;bfriesen@simple.dallas.tx.us&gt;
 
 <UL>
+  <LI> magick/command.c (MogrifyImage): Convolution failure results in
+        a crash rather than an error report.  Resolves Debian bug ID
+        539251.
+
+</UL>
+<p>
+2010-02-02  Bob Friesenhahn  &lt;bfriesen@simple.dallas.tx.us&gt;
+
+<UL>
   <LI> magick/deprecate.c: The string constants LoadImageText,
         SaveImageText, LoadImagesText, and SaveImagesText should have been
         deprecated, rather than being entirely removed.
